FIX: align zett logo with our grid
drive-by fix: https://www.dropbox.com/s/zsstssocmmeqxpm/Screenshot%202017-06-15%2011.50.37.png?dl=0 -> https://www.dropbox.com/s/23zide76kj5r8bf/Screenshot%202017-06-15%2011.52.58.png?dl=0

--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -31,7 +31,6 @@
 			background-color: $primary-color-zett
 			color: $white
 			height: remify(63px)
-			left: remify($page-padding)
 			position: absolute
 			text-align: center
 			top: 0
@@ -108,7 +107,8 @@
 			height: remify(50px)
 			margin-bottom: remify(13px)
 			overflow: visible // show the extending logo
-			padding: remify(14px) $page-padding
+			padding-bottom: remify(14px)
+			padding-top: remify(14px)
 			position: relative
 			&:after
 				color: $white
